feat: 구간 생성 예외 처리